add static folder for fop font detection

--- a/tools/fo.conf
+++ b/tools/fo.conf
@@ -8,6 +8,7 @@
     <renderer mime="application/pdf">
         <fonts>
           <directory>./</directory>
+          <directory>../static/</directory>
           <auto-detect/>
         </fonts>
     </renderer>
