fix font dir handling

--- a/tools/fo.conf
+++ b/tools/fo.conf
@@ -8,6 +8,7 @@
     <renderer mime="application/pdf">
         <fonts>
           <directory>../static/</directory>
+          <directory>static/</directory>
         </fonts>
     </renderer>
   </renderers>
