fix FOP config and fo.xsl

--- a/src/fo.conf
+++ b/src/fo.conf
@@ -7,8 +7,16 @@
   <renderers>
     <renderer mime="application/pdf">
         <fonts>
-          <directory>../static/</directory>
-          <directory>static/</directory>
+          <!--directory>static/fonts/</directory-->
+          <font kerning="yes" embed-url="static/fonts/crimson-roman-webfont.ttf" embedding-mode="subset">
+            <font-triplet name="Arial" style="normal" weight="normal"/>
+          </font>
+          <font kerning="yes" embed-url="static/fonts/crimson-italic-webfont.ttf" embedding-mode="subset">
+            <font-triplet name="Arial" style="italic" weight="normal"/>
+          </font>
+          <font kerning="yes" embed-url="static/fonts/crimson-bold-webfont.ttf" embedding-mode="subset">
+            <font-triplet name="Arial" style="normal" weight="bold"/>
+          </font>
         </fonts>
     </renderer>
   </renderers>
