--- a/bower.json
+++ b/bower.json
@@ -2,7 +2,8 @@
   "name": "ebooks",
   "version": "0.0.0",
   "dependencies": {
-    "html5shiv": "~3.6.1",
-    "jquery": "~1.9.1"
+    "html5shiv": "~3.7.2",
+    "jquery": "~2.1.3",
+    "normalize.css": "~3.0.2"
   }
 }
