--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "author": "Manuel Strehl",
   "repository": "https://github.com/Boldewyn/ebooks",
   "dependencies": {
-    "bower": "~1.3.5",
+    "html5shiv": "~3.7.2",
+    "jquery": "~2.1.3",
+    "normalize.css": "~3.0.2",
     "cssmin": "~0.4.1",
     "jshint": "~2.5.1",
     "uglify-js": "~2.4.14"
