--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "author": "Manuel Strehl",
   "repository": "https://github.com/Boldewyn/ebooks",
   "dependencies": {
+    "combokeys": "~2.3.0",
+    "cssmin": "~0.4.1",
     "html5shiv": "~3.7.2",
     "jquery": "~2.1.3",
-    "normalize.css": "~3.0.2",
-    "cssmin": "~0.4.1",
+    "jquery-mousewheel": "^3.1.12",
+    "jquery-ui": "^1.10.5",
     "jshint": "~2.5.1",
-    "uglify-js": "~2.4.14",
-    "combokeys": "~2.3.0"
+    "normalize.css": "~3.0.2",
+    "uglify-js": "~2.4.14"
   }
 }
