start switching to docs/ and redesigning CSS

--- a/.gitignore
+++ b/.gitignore
@@ -1,42 +1,4 @@
-/*.pdf
-/*.epub
-/*.mobi
 *.pyc
-/*.fo
 /.sass-cache
-/static/ebook.js
-/static/*.css
-/A_Christmas_Carol.html
-/A_Connecticut_Yankee.html
-/A_Study_in_Scarlet.html
-/Alices_Adventures_in_Wonderland.html
-/At_the_Mountains_of_Madness.html
-/Biene_Maja.html
-/Dracula.html
-/Frankenstein.html
-/Gullivers_Travels.html
-/Moby-Dick.html
-/Narrative_of_Arthur_Gordon_Pym.html
-/New_Arabian_Nights.html
-/Nils_Holgersson.html
-/Peter_Pan.html
-/Robinson_Crusoe.html
-/Siddhartha.html
-/The_Adventures_of_Sherlock_Holmes.html
-/The_Book_of_Tea.html
-/The_Call_of_Cthulhu.html
-/The_Case_of_Charles_Dexter_Ward.html
-/The_Happy_Prince_and_Other_Tales.html
-/The_Hound_of_the_Baskervilles.html
-/The_Invisible_Man.html
-/The_Jungle_Book.html
-/The_Picture_of_Dorian_Gray.html
-/The_Sign_of_the_Four.html
-/The_Strange_Case_of_Dr._Jekyll_and_Mr._Hyde.html
-/The_Time_Machine.html
-/The_War_of_the_Worlds.html
-/Treasure_Island.html
-/node_modules/
+/node_modules
 /src/js/*.d
-/src/sass/_ui
-/static/images/ui-icons_*.png
