--- a/package.json
+++ b/package.json
@@ -3,20 +3,22 @@
   "version": "1.0.0",
   "author": "Manuel Strehl",
   "repository": "https://github.com/Boldewyn/ebooks",
+  "license": "CC0-1.0",
   "dependencies": {
     "combokeys": "~2.3.0",
-    "cssmin": "~0.4.1",
-    "html5shiv": "~3.7.2",
     "jquery": "~2.1.3",
     "jquery-mousewheel": "^3.1.12",
     "jquery-ui": "^1.10.5",
     "jshint": "~2.5.1",
-    "normalize.css": "~3.0.2",
     "uglify-js": "~2.4.14"
   },
   "devDependencies": {
+    "autoprefixer": "^7.1.4",
     "browserify": "^9.0.3",
     "browserify-hogan": "0.3.0",
-    "hogan.js": "~2"
+    "cssnano": "^3.10.0",
+    "hogan.js": "~2",
+    "postcss-cli": "^4.1.1",
+    "postcss-import": "^11.0.0"
   }
 }
