--- a/package.json
+++ b/package.json
@@ -4,21 +4,28 @@
   "author": "Manuel Strehl",
   "repository": "https://github.com/Boldewyn/ebooks",
   "license": "CC0-1.0",
+  "babel": {
+    "presets": [
+      "env"
+    ]
+  },
   "dependencies": {
-    "combokeys": "~2.3.0",
-    "jquery": "~2.1.3",
+    "combokeys": "^3.0.0",
+    "jquery": "^3.2.1",
     "jquery-mousewheel": "^3.1.12",
-    "jquery-ui": "^1.10.5",
-    "jshint": "~2.5.1",
-    "uglify-js": "~2.4.14"
+    "jquery-ui": "^1.10.5"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.4",
-    "browserify": "^9.0.3",
-    "browserify-hogan": "0.3.0",
+    "babel-core": "^6.25.0",
+    "babel-loader": "^7.1.1",
+    "babel-preset-env": "^1.6.0",
     "cssnano": "^3.10.0",
-    "hogan.js": "~2",
+    "hogan.js": "^3.0.2",
+    "jshint": "^2.9.5",
     "postcss-cli": "^4.1.1",
-    "postcss-import": "^11.0.0"
+    "postcss-import": "^11.0.0",
+    "uglify-js": "^3.1.3",
+    "webpack": "^3.7.1"
   }
 }
