--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -7,9 +7,16 @@
   "background_color" : "#f7f8f6" ,
   "theme_color" : "#303636" ,
   "description": "Free ebooks to read and enjoy.",
-  "icons": [{
-    "src": "static/icon_48.png",
-    "sizes": "48x48",
-    "type": "image/png"
-  }]
+  "icons": [
+      {
+          "src": "/android-chrome-192x192.png",
+          "sizes": "192x192",
+          "type": "image/png"
+      },
+      {
+          "src": "/android-chrome-512x512.png",
+          "sizes": "512x512",
+          "type": "image/png"
+      }
+  ]
 }
